# Quantum-IDE

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
QuantomIDE/: CMakeLists.txt
QuantomIDE/include/: Application.hpp  BuildSystem.hpp  DebugSystem.hpp  EditorManager.hpp  FileDialog.hpp  FileManager.hpp  LSP.hpp  MenuBar.hpp  Project.hpp  StatusBar.hpp  TreeView.hpp  UIManager.hpp
QuantomIDE/src/: Application.cpp  BuildSystem.cpp  DebugSystem.cpp  EditorManager.cpp  FileManager.cpp  LSP.cpp  MenuBar.cpp  Project.cpp  StatusBar.cpp  TreeView.cpp  UIManager.cpp  main.cpp
core/: CMakeLists.txt
core/include/: Core.hpp  EventBus.hpp  FileSystem.hpp  FileWatcher.hpp  Log.hpp  Logger.hpp  MemoryPool.hpp  Platform.hpp  ThreadPool.hpp  Timer.hpp
core/src/: Core.cpp  FileSystem.cpp  Log.cpp  MemoryPool.cpp  Platform.cpp  Timer.cpp
include/: Application.hpp  BuildSystem.hpp  EditorManager.hpp  MenuBar.hpp  TreeView.hpp  UIManager.hpp
src/: Application.cpp  BuildSystem.cpp  EditorManager.cpp  MenuBar.cpp  Project.cpp  UIManager.cpp  main.cpp
tests/: CMakeLists.txt  test_FileSystem.cpp
